Sat Oct 30 07:07:44 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Policies/deadline_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dest_order_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dp_factory_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dp_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dr_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dur_qos_test.h:
        * connectors/dds4ccm/tests/Policies/dur_service_qos_test.h:
        * connectors/dds4ccm/tests/Policies/duration.h:
        * connectors/dds4ccm/tests/Policies/dw_qos_test.h:
        * connectors/dds4ccm/tests/Policies/entity_factory_qos_test.h:
        * connectors/dds4ccm/tests/Policies/group_data_qos_test.h:
        * connectors/dds4ccm/tests/Policies/hist_qos_test.h:
        * connectors/dds4ccm/tests/Policies/lat_budget_qos_test.h:
        * connectors/dds4ccm/tests/Policies/lifespan_qos_test.h:
        * connectors/dds4ccm/tests/Policies/liveliness_qos_test.h:
        * connectors/dds4ccm/tests/Policies/octet_seq.h:
        * connectors/dds4ccm/tests/Policies/ownership_qos_test.h:
        * connectors/dds4ccm/tests/Policies/ownership_strength_qos_test.h:
        * connectors/dds4ccm/tests/Policies/partition_qos_test.h:
        * connectors/dds4ccm/tests/Policies/presentation_qos_test.h:
        * connectors/dds4ccm/tests/Policies/pub_qos_test.h:
        * connectors/dds4ccm/tests/Policies/rd_lifecycle_qos_test.h:
        * connectors/dds4ccm/tests/Policies/reliability_qos_test.h:
        * connectors/dds4ccm/tests/Policies/resource_limits_qos_test.h:
        * connectors/dds4ccm/tests/Policies/sub_qos_test.h:
        * connectors/dds4ccm/tests/Policies/tbf_qos_test.h:
        * connectors/dds4ccm/tests/Policies/tp_data_qos_test.h:
        * connectors/dds4ccm/tests/Policies/tp_qos_test.h:
        * connectors/dds4ccm/tests/Policies/transport_prio_qos_test.h: