@@ -228,7 +228,7 @@ namespace CIAO_Writer_Sender_Impl
         throw ::CORBA::INTERNAL ();
       }
 
-    typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+    typedef ::CIAO::DDS4CCM::DDS_DataWriter_Base DataWriter_type;
 
     DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type*> (dds_dw.in ());
     if (typed_ccm_dw)
