@@ -15,7 +15,7 @@
 
 #include "tao/LocalObject.h"
 
-#include "dds4ccm/impl/DataWriter_T.h"
+#include "dds4ccm/impl/ndds/DataWriter_T.h"
 
 #include <map>
 
