@@ -11,7 +11,7 @@
 #include "Base/BaseSupport.h"
 #include "Connector/Connector_conn.h"
 
-#include "dds4ccm/impl/DataWriter_T.h"
+#include "dds4ccm/impl/ndds/DataWriter_T.h"
 
 const char * tp_name_conn_1_ = "SharedDP";
 const char * tp_name_conn_2_ = "SharedDP";
@@ -76,7 +76,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
                         "Datawriter 1 connection is NIL.\n"));
             throw ::CORBA::INTERNAL ();
           }
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        typedef ::CIAO::DDS4CCM::DDS_DataWriter_Base DataWriter_type;
         DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw1.in ());
         if (typed_ccm_dw)
           {
@@ -112,7 +112,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             throw ::CORBA::INTERNAL ();
           }
 
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        typedef ::CIAO::DDS4CCM::DDS_DataWriter_Base DataWriter_type;
         DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw2.in ());
         if (typed_ccm_dw)
           {
@@ -148,7 +148,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             throw ::CORBA::INTERNAL ();
           }
 
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        typedef ::CIAO::DDS4CCM::DDS_DataWriter_Base DataWriter_type;
         DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw3.in ());
         if (typed_ccm_dw)
           {
@@ -183,7 +183,7 @@ namespace CIAO_SharedDP_SharedDPComponent_Impl
             throw ::CORBA::INTERNAL ();
           }
 
-        typedef ::CIAO::DDS4CCM::CCM_DDS_DataWriter_Base DataWriter_type;
+        typedef ::CIAO::DDS4CCM::DDS_DataWriter_Base DataWriter_type;
         DataWriter_type * typed_ccm_dw = dynamic_cast <DataWriter_type *> (dw4.in ());
         if (typed_ccm_dw)
           {
